--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ background-image: linear-gradient(315deg, #eec0c6 0%, #7ee8fa 74%)
             }
             a {
   background-color: transparent;
-  color: #0032FF;
+  color: #FFFFFF;
   padding: 1px 1px;
   text-decoration: none;
   text-transform: none;
