--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ background-image: linear-gradient(315deg, #eec0c6 0%, #7ee8fa 74%)
                 filter: drop-shadow(2px 2px 10px #FF002B);
 }
 .m {
-    background-color: #005156;
+    background-color: #53B0FF;
 }
 .x {
     color: #FFFFFF;
